Remove pip installation as now preinstalled on NapierVM

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -655,13 +655,10 @@ print("Hello Napier")
 \paragraph{} Flask supports us in building web-apps that conform to the Python Web Server Gateway Interface (WSGI)\footnote{The WSGI standard is described in this Python Pep:\url{https://www.python.org/dev/peps/pep-0333/}. A PEP is a Python Enhancement Proposal and is the main way that the planned development of the Python language progresses.}. The goal of WSGI is to make it easy to develop and deploy Python web-app, regardless of the library that is used. So developers can find a library that they find useful, or helps them to tackled their development task, but the output of the process, the web-app has know features and capabilities which means that any server that supports the WSGI can run the web-app. This is similar to what happened with web-app development in Java, where the servlet API means that many tools can be used to build a Java web-app and many web-servers can then run the app.
 
 \subsection{Installation}
-\paragraph{} We should only need to go through this process once. We are going to install some bits of software to enable us to manage python libraries. Flask is a library, but not the only one that we'll use, so having a way to manage different versions of our libraries is a useful thing. It's also the `proper way to do things'. We first need to install Python pip:
+\paragraph{} We should only need to go through this process once. We are going to install some bits of software to enable us to manage python libraries. Flask is a library, but not the only one that we'll use, so having a way to manage different versions of our libraries is a useful thing. It's also the `proper way to do things'. 
 
-\begin{lstlisting}[style=DOS]
-    $ sudo apt install python-pip
-\end{lstlisting}
 
-\paragraph{} Enter your password when prompted and agree ('y') when asked if you want to continue. This will take a few moment to install your software. The command we've just used install a program called pip. We use pip to install and manager libraries of Python sourcecode, such as the web library (Flask) that we're using in this module. We also need a second Python tool that is used to manage sets of Python libraries, so that we can use different versions of libraries for different projects without them all interfering with each other. This tool creates a `virtual environment' for our python web apps to run in and makes sure that the right versions of the right libraries are available to our web-app. The tool we'll use is called `VirtualEnv' and we can install it like so:
+\paragraph{}The command we've just used install a program called pip. We use pip to install and manager libraries of Python sourcecode, such as the web library (Flask) that we're using in this module. We also need a second Python tool that is used to manage sets of Python libraries, so that we can use different versions of libraries for different projects without them all interfering with each other. This tool creates a `virtual environment' for our python web apps to run in and makes sure that the right versions of the right libraries are available to our web-app. The tool we'll use is called `VirtualEnv' and we can install it like so:
 
 \begin{lstlisting}[style=DOS]
     $ sudo apt install virtualenv
