Clarify that we want the SSH clone URL in the first challenge.

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -768,7 +768,7 @@ def hello_world():
 \paragraph{} Right. Thats all the preliminaries in place for building web-apps in our learning environment. We can now run a small and lightweight, but otherwise similar to full Linux installs, virtualised server which will host our web-apps. We can log in to the server using SSH, navigate the Linux environment, and edit files using VIM. We can also take advantage of the installed Python language and Python-Flask web-app library to build our own web-apps.
 
 \begin{framed}
-\textbf{CHALLENGE \#1} You should already know how to do this and this is, as a result, merely some extrac practise. Create a Github or Bitbucket account. Bitbucket allows you to create an unlimited number of private repositories if you use your @napier address to register whereas Github restricts the number of private repos. That said, either site allows you to create as manay public repositories as you like. Create a remote repo in your Github or Bitbucket account called `set09103'. Log into the Linux dev server then clone your set09103 repo. Create a new file in your repo called `hello.txt' and put the message ``Hello Simon'' in it then add, commit and push your changes to your remote repo. Once you have done this, check on either Github or Bitbucket to ensure that your text file is in the repo where you expect it to be then send an email to Simon containing the name of your account, which service, Github or Bitbucket, you are using, and the clone url for your set09103 repository. {\emph{If you use a private repository then you will have to add my account as a collaborator. On both Github and Bitbucket my account name is `siwells'}}. This is just for practise for the moment. Later, we'll each create a `bare' Git repository in our personal VM. I will clone the repository in your VM (not from GitHub or BitBucket) as part of the coursework assignment submission process, so getting ourselves familiar with, and practising with Git is very important.
+\textbf{CHALLENGE \#1} You should already know how to do this, and this is, as a result, merely some extrac practise. Create a Github or Bitbucket account. Bitbucket allows you to create an unlimited number of private repositories if you use your @napier address to register whereas Github restricts the number of private repos. That said, either site allows you to create as manay public repositories as you like. Create a remote repo in your Github or Bitbucket account called `set09103'. Log into the Linux dev server then clone your set09103 repo. Create a new file in your repo called `hello.txt' and put the message ``Hello Simon'' in it then add, commit and push your changes to your remote repo. Once you have done this, check on either Github or Bitbucket to ensure that your text file is in the repo where you expect it to be then send an email to Simon containing the name of your account, which service, Github or Bitbucket, you are using, and the SSH clone url for your set09103 repository. {\emph{If you use a private repository then you will have to add my account as a collaborator. On both Github and Bitbucket my account name is `siwells'}}. This is just for practise for the moment. Later, we'll each create a `bare' Git repository in our personal VM. I will clone the repository in your VM (not from GitHub or BitBucket) as part of the coursework assignment submission process, so getting ourselves familiar with, and practising with Git is very important.
 \end{framed}
 \begin{framed}
 \textbf{CHALLENGE \#2} We'll build on the Hello Napier app over the next few weeks, but we haven't yet learned to do much more than return a string from our app (which then displays in the browser). Play around with the hello napier app that we created earlier today. What happens when you return other things in the string? Can you work out how to run some different Python code and return the result? What about getting the app to generate a different random message each time the browser page is refreshed? Finally, as you should already know HTML, investigate what happens when you put some HTML tags in the return string? Could you use this to build a more interesting page? Note that we'll use easier techniques to build HTML pages later, but I want you to get into the habit of doing the following, playing with code, experimenting, and trying out your own ideas, so that you can build your own understanding of how all the various things that we're learning work together.
