Make terminal examples small size instead of scriptsize for easier reading

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -41,9 +41,9 @@
 \lstdefinestyle{DOS}
 {
     backgroundcolor=\color{black},
-    basicstyle=\scriptsize\color{white}\ttfamily,
+    basicstyle=\small\color{white}\ttfamily,
     stringstyle=\color{white},
-    keywords={}
+    keywords={}z
 }
 
 \lstdefinestyle{makefile}
