Add bitvise ssh client to list of PuTTy alternatives.

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -289,7 +289,7 @@ SESQUIPEDALIA VERBA PUBLISHING LTD
 \label{fig:dev-server-login-window}
 \end{figure}
 
-\paragraph{} Remember, you can repeat this process with PuTTY as many times as required to get yourself enough shells into the development server to make things easier to work with\footnote{This is not the best way to work with multiple shells. Another, more powerful way is to use a shell multiplexer, my favourite is one called Screen (\url{https://www.gnu.org/software/screen/}) (Tmux is an alternative that is popular) but these are yet more tools to learn, and another set of commands, so lets try to keep things \emph{reasonably} simple for now. Being aware that these things exist though means that when you really need them you know that there is a tool out there waiting for you.}. Alternatively you can use a different SSH client tool, there are many for Windows and some have useful features, like managing multiple connections. Alternatives include the following, but there are many more, MobaXTerm\footnote{\url{https://mobaxterm.mobatek.net/}}, MremoteNG\footnote{\url{https://mremoteng.org/}}, secureCRT\footnote{\url{https://www.vandyke.com/products/securecrt/}}, and Solar Putty\footnote{\url{https://www.solarwinds.com/free-tools/solar-putty}}. Note that not all of these are free however, but some have a demo, evaluation, or community version that you can use. The moral here is to try things out, see what works for you, and care about the tools that you learn to use.
+\paragraph{} Remember, you can repeat this process with PuTTY as many times as required to get yourself enough shells into the development server to make things easier to work with\footnote{This is not the best way to work with multiple shells. Another, more powerful way is to use a shell multiplexer, my favourite is one called Screen (\url{https://www.gnu.org/software/screen/}) (Tmux is an alternative that is popular) but these are yet more tools to learn, and another set of commands, so lets try to keep things \emph{reasonably} simple for now. Being aware that these things exist though means that when you really need them you know that there is a tool out there waiting for you.}. Alternatively you can use a different SSH client tool, there are many for Windows and some have useful features, like managing multiple connections. Alternatives include the following, but there are many more, Bitvise SSH Client\footnote{\url{https://www.bitvise.com/index}}, MobaXTerm\footnote{\url{https://mobaxterm.mobatek.net/}}, MremoteNG\footnote{\url{https://mremoteng.org/}}, secureCRT\footnote{\url{https://www.vandyke.com/products/securecrt/}}, and Solar Putty\footnote{\url{https://www.solarwinds.com/free-tools/solar-putty}}. Note that not all of these are free however, but some have a demo, evaluation, or community version that you can use. The moral here is to try things out, see what works for you, and care about the tools that you learn to use.
 
 \begin{framed}
 \textbf{IMPORTANT TIP} I usually use SSH to log in at least twice. This gives me a window to edit text in and a window to test my code in. Often I will also have a third window open which I use for command line interaction, Git commits, and testing API calls using cURL, but two is the minimum for a nice development setup - Remember, this is your development environment so you might as well take some time to set it up nicely and so that you can work more productively.
