Add line numbers to Vim cribsheet

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2847,6 +2847,7 @@ if __name__ == "__main__":
 \item[d`a] - Delete everything from the marked position to here
 \item[`a] -  Go back to the marked position] 
 \item[:s/s1/s2] - Replace (``substitute'') (the first) s1 in this line by s2
+\item[:set number] Turn on line numbering.  Add this to your .vimrc file to have numbers on by default. Use \emph{:set nonumber} to turn line numbers off again.
 \end{description}
 
 
